Improve readability by using Java 9+ methods.